FeatureHU03: creacion de los modulos, componentes y servicios para performers(Bands, Musicians)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-
+<h1>Listado de artistas
+</h1>
+<app-performer></app-performer>
 <div>
   <router-outlet #myOutlet="outlet"></router-outlet>
 </div>
