--- a/reports/ut_report.xml
+++ b/reports/ut_report.xml
@@ -1,10 +1,15 @@
 <testExecutions version="1">
-  <file path="src/app/performer/performer.component.spec.ts">
-    <testCase name="PerformerComponent should create" duration="56"/>
-  </file>
   <file path="src/app/app.component.spec.ts">
-    <testCase name="AppComponent should have as title 'front'" duration="12"/>
-    <testCase name="AppComponent should render title" duration="104">
+    <testCase name="AppComponent should have as title 'front'" duration="198">
+      <failure message="Error">Error: Expected 'front' to equal 'Front'.
+    at &lt;Jasmine&gt;
+    at UserContext.&lt;anonymous&gt; (http://localhost:9876/_karma_webpack_/src/app/app.component.spec.ts:26:23)
+    at ZoneDelegate.invoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:364:1)
+    at ProxyZoneSpec.push../node_modules/zone.js/dist/zone-testing.js.ProxyZoneSpec.onInvoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:292:1)
+</failure>
+    </testCase>
+    <testCase name="AppComponent should create the app" duration="8"/>
+    <testCase name="AppComponent should render title" duration="8">
       <failure message="Error">TypeError: Cannot read property 'textContent' of null
     at &lt;Jasmine&gt;
     at UserContext.&lt;anonymous&gt; (http://localhost:9876/_karma_webpack_/src/app/app.component.spec.ts:33:51)
@@ -17,40 +22,20 @@
     at &lt;Jasmine&gt;
 </failure>
     </testCase>
-    <testCase name="AppComponent should create the app" duration="12"/>
-  </file>
-  <file path="src/app/components/home/home.component.spec.ts">
-    <testCase name="HomeComponent should create" duration="14">
-      <failure message="Error">NullInjectorError: R3InjectorError(DynamicTestModule)[ExampleService -&gt; HttpClient -&gt; HttpClient]: 
-  NullInjectorError: No provider for HttpClient!
-error properties: Object({ ngTempTokenPath: null, ngTokenPath: [ 'ExampleService', 'HttpClient', 'HttpClient' ] })
-    at &lt;Jasmine&gt;
-    at NullInjector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:915:1)
-    at R3Injector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:11082:1)
-    at R3Injector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:11082:1)
-    at injectInjectorOnly (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:801:1)
-    at ɵɵinject (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:805:1)
-    at Object.ExampleService_Factory [as factory] (ng:///ExampleService/ɵfac.js:5:42)
-    at R3Injector.hydrate (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:11249:1)
-    at R3Injector.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:11071:1)
-    at NgModuleRef$1.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:24199:1)
-    at Object.get (http://localhost:9876/_karma_webpack_/node_modules/@angular/core/__ivy_ngcc__/fesm2015/core.js:22102:1)
-
-Error: Expected undefined to be truthy.
-    at &lt;Jasmine&gt;
-    at UserContext.&lt;anonymous&gt; (http://localhost:9876/_karma_webpack_/src/app/components/home/home.component.spec.ts:23:23)
-    at ZoneDelegate.invoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:364:1)
-    at ProxyZoneSpec.push../node_modules/zone.js/dist/zone-testing.js.ProxyZoneSpec.onInvoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:292:1)
-</failure>
-    </testCase>
   </file>
   <file path="src/app/services/example.service.spec.ts">
-    <testCase name="Service: Post should create service" duration="2"/>
+    <testCase name="Service: Post should create service" duration="4"/>
   </file>
-  <file path="src/app/performer/band.service.spec.ts">
-    <testCase name="Service: Band should create service" duration="2"/>
+  <file path="src/app/performer/performer.component.spec.ts">
+    <testCase name="PerformerComponent should create" duration="27"/>
   </file>
   <file path="src/app/performer/musician.service.spec.ts">
-    <testCase name="Service: Musician should create service" duration="3"/>
+    <testCase name="Service: Musician should create service" duration="2"/>
+  </file>
+  <file path="src/app/performer/band.service.spec.ts">
+    <testCase name="Service: Band should create service" duration="4"/>
+  </file>
+  <file path="src/app/components/home/home.component.spec.ts">
+    <testCase name="HomeComponent should create" duration="10"/>
   </file>
 </testExecutions>
