FeatureHU03: Pruebas unitarias success 8 of 8

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div class="content" role="main">
+
+<span>{{ title }} app is running!</span>
+</div>
 <h1>Listado de artistas
 </h1>
 <app-performer></app-performer>
