--- a/reports/ut_report.xml
+++ b/reports/ut_report.xml
@@ -1,34 +1,22 @@
 <testExecutions version="1">
-  <file path="src/app/services/example.service.spec.ts">
-    <testCase name="Service: Post should create service" duration="15"/>
+  <file path="src/app/app.component.spec.ts">
+    <testCase name="AppComponent should render title" duration="50"/>
+    <testCase name="AppComponent should have as title 'front'" duration="8"/>
+    <testCase name="AppComponent should create the app" duration="6"/>
   </file>
-  <file path="src/app/performer/performer.component.spec.ts">
-    <testCase name="PerformerComponent should create" duration="50"/>
+  <file path="src/app/performer/band.service.spec.ts">
+    <testCase name="Service: Band should create service" duration="4"/>
+  </file>
+  <file path="src/app/components/home/home.component.spec.ts">
+    <testCase name="HomeComponent should create" duration="12"/>
   </file>
   <file path="src/app/performer/musician.service.spec.ts">
     <testCase name="Service: Musician should create service" duration="3"/>
   </file>
-  <file path="src/app/performer/band.service.spec.ts">
-    <testCase name="Service: Band should create service" duration="2"/>
+  <file path="src/app/performer/performer.component.spec.ts">
+    <testCase name="PerformerComponent should create" duration="19"/>
   </file>
-  <file path="src/app/app.component.spec.ts">
-    <testCase name="AppComponent should render title" duration="99">
-      <failure message="Error">TypeError: Cannot read property 'textContent' of null
-    at &lt;Jasmine&gt;
-    at UserContext.&lt;anonymous&gt; (http://localhost:9876/_karma_webpack_/src/app/app.component.spec.ts:33:51)
-    at ZoneDelegate.invoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:364:1)
-    at ProxyZoneSpec.push../node_modules/zone.js/dist/zone-testing.js.ProxyZoneSpec.onInvoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:292:1)
-    at ZoneDelegate.invoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:363:1)
-    at Zone.run (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:123:1)
-    at runInTestZone (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:545:1)
-    at UserContext.&lt;anonymous&gt; (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:560:1)
-    at &lt;Jasmine&gt;
-</failure>
-    </testCase>
-    <testCase name="AppComponent should have as title 'front'" duration="8"/>
-    <testCase name="AppComponent should create the app" duration="5"/>
-  </file>
-  <file path="src/app/components/home/home.component.spec.ts">
-    <testCase name="HomeComponent should create" duration="9"/>
+  <file path="src/app/services/example.service.spec.ts">
+    <testCase name="Service: Post should create service" duration="2"/>
   </file>
 </testExecutions>
