FeatureHu03: se añade el componente performer-list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,8 @@
 
 <span>{{ title }} app is running!</span>
 </div>
-<h1>Listado de artistas
-</h1>
-<app-performer></app-performer>
+
+<app-performer-list></app-performer-list>
 <div>
   <router-outlet #myOutlet="outlet"></router-outlet>
 </div>
