--- a/src/app/components/albumes/albumes.component.html
+++ b/src/app/components/albumes/albumes.component.html
@@ -1,3 +1,3 @@
 <div class="contenedor-principal">
-    <app-card-albumes></app-card-albumes>
+    <app-card-albumes [albumes]="albums"></app-card-albumes>
 </div>
