--- a/src/app/shared/components/card-albumes/card-albumes.component.html
+++ b/src/app/shared/components/card-albumes/card-albumes.component.html
@@ -1,24 +1,19 @@
-<div class="container-ruta">
-  <div *ngFor="let item of rutaActive; let i = index" class="container-card">
-    <div class="img-driver" *ngIf="item.image.length>0">
-      <img src="{{item.image}}"  />
-    </div>
-    <div class="title">
-      <span>{{item.nameRuta}}</span>
-    </div>
-    <div class="name">
-      <span>{{item.name}}</span>
-    </div>
-    <div *ngFor="let names of item.fields; let j = index"  class="container-information">
-      <div class="container-detail">
-        <div class="item">
-          <span>{{names.description}}</span>
-        </div>
-        <div class="item-information">
-          <span>{{names.title}}</span>
-        </div>
+<div class="container-album">
+  <div *ngFor="let item of albumes; let i = index" class="detail-album">
+      <div class="img-driver">
+        <img src="{{item.image}}" alt="">
       </div>
-      <hr/>
-    </div>
+      <div class="album-title">
+        <span>{{item.titleAlbum}}</span>
+      </div>
+      <div class="album-group">
+        <span>{{item.groupAlbum}}</span>
+      </div>
+      <div class="album-gender">
+         <span>{{item.genderAlbum}}</span>
+      </div>
+      <div class="album-state">
+        <span>{{item.stateAlbum}}</span>
+      </div>
   </div>
 </div>
