Feature HU001: Implementacion de faker and check the view with test (Verde)

--- a/src/app/shared/components/card-albumes/card-albumes.component.html
+++ b/src/app/shared/components/card-albumes/card-albumes.component.html
@@ -4,7 +4,7 @@
         <img src="{{item.image}}" alt="">
       </div>
       <div class="album-title">
-        <span>{{item.titleAlbum}}</span>
+        <span id="title">{{item.titleAlbum}}</span>
       </div>
       <div class="album-group">
         <span>{{item.groupAlbum}}</span>
