--- a/reports/ut_report.xml
+++ b/reports/ut_report.xml
@@ -1,21 +1,22 @@
 <testExecutions version="1">
-  <file path="src/app/services/albumes.service.spec.ts">
-    <testCase name="AlbumsService check the services when is having error" duration="25"/>
-    <testCase name="AlbumsService check the success services" duration="4"/>
-    <testCase name="AlbumsService should be created" duration="3"/>
-  </file>
   <file path="src/app/shared/components/card-albumes/card-albumes.component.spec.ts">
-    <testCase name="CardAlbumesComponent check the view when it has data" duration="42"/>
-    <testCase name="CardAlbumesComponent check the view when is the data is not empty" duration="6"/>
-    <testCase name="CardAlbumesComponent check the view when is the data is empty" duration="6"/>
-    <testCase name="CardAlbumesComponent should create" duration="6"/>
+    <testCase name="CardAlbumesComponent check the view when it has data" duration="55"/>
+    <testCase name="CardAlbumesComponent check the view when is the data is not empty" duration="7"/>
+    <testCase name="CardAlbumesComponent should create" duration="7"/>
+    <testCase name="CardAlbumesComponent check the view when is the data is empty" duration="5"/>
   </file>
   <file path="src/app/app.component.spec.ts">
-    <testCase name="AppComponent should create the app" duration="13"/>
+    <testCase name="AppComponent should create the app" duration="14"/>
+  </file>
+  <file path="src/app/services/albumes.service.spec.ts">
+    <testCase name="AlbumsService should be created" duration="5"/>
+    <testCase name="AlbumsService check the success services" duration="3"/>
+    <testCase name="AlbumsService check the services when is having error" duration="4"/>
   </file>
   <file path="src/app/components/albumes/albumes.component.spec.ts">
-    <testCase name="AlbumesComponent check the albumes is not empty" duration="10"/>
-    <testCase name="AlbumesComponent should create" duration="6"/>
-    <testCase name="Get error in services Checking error in service" duration="7"/>
+    <testCase name="AlbumesComponent check the albumes is not empty" duration="11"/>
+    <testCase name="AlbumesComponent check the first album is Salsa" duration="12"/>
+    <testCase name="AlbumesComponent Checking the albums first name is Buscando América" duration="12"/>
+    <testCase name="AlbumesComponent should create" duration="9"/>
   </file>
 </testExecutions>
