FeatureHU02: Creacion del componente detail album adicional se corrigen pruebas unitarias debido a que se requiere el id del album

--- a/src/app/shared/components/card-albumes/card-albumes.component.html
+++ b/src/app/shared/components/card-albumes/card-albumes.component.html
@@ -1,5 +1,5 @@
 <div class="container-album">
-  <div *ngFor="let item of albumes; let i = index" class="detail-album">
+  <div *ngFor="let item of albumes; let i = index" class="detail-album" (click)="clickItem(i)">
       <div class="img-driver">
         <img src="{{item.image}}" alt="">
       </div>
