FeatureHU02: Corregi pruebas unitarias para cobertura de codigo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header [header]="getHeader()"  (index)="showItem($event)"></app-header>
 <div>
-  <router-outlet #myOutlet="outlet"></router-outlet>
+  <router-outlet #myOutlet="outlet">
+
+  </router-outlet>
 </div>
