--- a/reports/ut_report.xml
+++ b/reports/ut_report.xml
@@ -1,61 +1,148 @@
 <testExecutions version="1">
-  <file path="src/app/shared/components/header/header.component.spec.ts">
-    <testCase name="HeaderComponent Checking the view in header" duration="49"/>
-    <testCase name="HeaderComponent should emit index event clickItem" duration="11"/>
-    <testCase name="HeaderComponent should create" duration="7"/>
-  </file>
-  <file path="src/app/services/musician.service.spec.ts">
-    <testCase name="Service: Musician Method getMusicians() should return 10 records" duration="7"/>
-  </file>
-  <file path="src/app/shared/components/card-albumes/card-albumes.component.spec.ts">
-    <testCase name="CardAlbumesComponent check the view when is the data is not empty" duration="17"/>
-    <testCase name="CardAlbumesComponent check the view when is the data is empty" duration="5"/>
-    <testCase name="CardAlbumesComponent should create" duration="6"/>
-    <testCase name="CardAlbumesComponent check the view when it has data" duration="8"/>
-    <testCase name="CardAlbumesComponent should emit index event clickItem" duration="5"/>
+  <file path="src/app/services/band.service.spec.ts">
+    <testCase name="Service: Band Method getBands() should return 10 records" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
   </file>
   <file path="src/app/services/collector.service.spec.ts">
-    <testCase name="Service: Collector should create service" duration="3"/>
-    <testCase name="Service: Collector getCollectors() should return 10 records" duration="3"/>
-  </file>
-  <file path="src/app/services/band.service.spec.ts">
-    <testCase name="Service: Band Method getBands() should return 10 records" duration="3"/>
-  </file>
-  <file path="src/app/services/albumes.service.spec.ts">
-    <testCase name="AlbumsService should be created" duration="5"/>
-    <testCase name="AlbumsService check the success services" duration="3"/>
-    <testCase name="AlbumsService check the services when is having error" duration="5"/>
-  </file>
-  <file path="src/app/components/performer-list/performer-list.component.spec.ts">
-    <testCase name="PerformerListComponent should create" duration="19"/>
-    <testCase name="PerformerListComponent Should have an header element band name" duration="10"/>
-  </file>
-  <file path="src/app/components/detail-album/detail-album.component.spec.ts">
-    <testCase name="DetailAlbumComponent should create" duration="6"/>
-  </file>
-  <file path="src/app/components/collector-listar/collector-listar.component.spec.ts">
-    <testCase name="CollectorListarComponent should create" duration="9"/>
-  </file>
-  <file path="src/app/shared/services/header.service.spec.ts">
-    <testCase name="HeaderService should be created" duration="2"/>
-    <testCase name="HeaderService check the method was been called" duration="4"/>
-    <testCase name="HeaderService check the data when the user has menu" duration="2"/>
+    <testCase name="Service: Collector should create service" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="Service: Collector getCollectors() should return 10 records" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
   </file>
   <file path="src/app/app.component.spec.ts">
-    <testCase name="AppComponent check the first second in header  " duration="12"/>
-    <testCase name="AppComponent check the first third in header  " duration="7"/>
-    <testCase name="AppComponent check the header size " duration="8"/>
-    <testCase name="AppComponent check the first item in header  " duration="7"/>
-    <testCase name="AppComponent should create the app" duration="7"/>
-    <testCase name="AppComponent should trigger click option performer" duration="7"/>
-    <testCase name="AppComponent should trigger click option albumes" duration="7"/>
-    <testCase name="AppComponent should trigger click option collector" duration="10"/>
-    <testCase name="AppComponent check the first fourth in header  " duration="7"/>
+    <testCase name="AppComponent should trigger click option performer" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AppComponent should trigger click option albumes" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AppComponent check the header size " duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AppComponent should create the app" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AppComponent check the first third in header  " duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AppComponent should trigger click option collector" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AppComponent check the first second in header  " duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AppComponent check the first fourth in header  " duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AppComponent check the first item in header  " duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
   </file>
   <file path="src/app/components/albumes/albumes.component.spec.ts">
-    <testCase name="AlbumesComponent check the albumes is not empty" duration="9"/>
-    <testCase name="AlbumesComponent should create" duration="8"/>
-    <testCase name="AlbumesComponent check the first album is Salsa" duration="6"/>
-    <testCase name="AlbumesComponent Checking the albums first name is Buscando América" duration="6"/>
+    <testCase name="AlbumesComponent check the first album is Salsa" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AlbumesComponent should create" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AlbumesComponent Checking the albums first name is Buscando América" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AlbumesComponent check the albumes is not empty" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+  </file>
+  <file path="src/app/components/collector-listar/collector-listar.component.spec.ts">
+    <testCase name="CollectorListarComponent should create" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+  </file>
+  <file path="src/app/components/detail-album/detail-album.component.spec.ts">
+    <testCase name="DetailAlbumComponent check the collection in data" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="DetailAlbumComponent check the navigation" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="DetailAlbumComponent check the getDetailAlbum" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="DetailAlbumComponent should create" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+  </file>
+  <file path="src/app/shared/components/card-albumes/card-albumes.component.spec.ts">
+    <testCase name="CardAlbumesComponent check the view when is the data is not empty" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="CardAlbumesComponent check the view when it has data" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="CardAlbumesComponent should emit index event clickItem" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="CardAlbumesComponent should create" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="CardAlbumesComponent check the view when is the data is empty" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+  </file>
+  <file path="src/app/services/musician.service.spec.ts">
+    <testCase name="Service: Musician Method getMusicians() should return 10 records" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+  </file>
+  <file path="src/app/shared/services/header.service.spec.ts">
+    <testCase name="HeaderService check the method was been called" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="HeaderService check the data when the user has menu" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="HeaderService should be created" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+  </file>
+  <file path="src/app/shared/components/header/header.component.spec.ts">
+    <testCase name="HeaderComponent Checking the view in header" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="HeaderComponent should emit index event clickItem" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="HeaderComponent should create" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+  </file>
+  <file path="src/app/components/performer-list/performer-list.component.spec.ts">
+    <testCase name="PerformerListComponent Should have an header element band name" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="PerformerListComponent should create" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+  </file>
+  <file path="src/app/services/albumes.service.spec.ts">
+    <testCase name="AlbumsService check set and get " duration="93">
+      <failure message="Error">Error: Expected 'Salsa' to equal 'Cannot GET /albumsa'.
+    at &lt;Jasmine&gt;
+    at UserContext.&lt;anonymous&gt; (http://localhost:9876/_karma_webpack_/src/app/services/albumes.service.spec.ts:67:43)
+    at ZoneDelegate.invoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-evergreen.js:364:1)
+    at ProxyZoneSpec.onInvoke (http://localhost:9876/_karma_webpack_/node_modules/zone.js/dist/zone-testing.js:292:1)
+</failure>
+    </testCase>
+    <testCase name="AlbumsService check the services when is having error" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AlbumsService should be created" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
+    <testCase name="AlbumsService check the success services" duration="1">
+      <skipped message="Skipped"/>
+    </testCase>
   </file>
 </testExecutions>
