--- a/src/app/components/detail-album/detail-album.component.html
+++ b/src/app/components/detail-album/detail-album.component.html
@@ -1,1 +1,61 @@
-<p>detail-album works!</p>
+<div class="container-detail-album">
+  <div class="container-information">
+    <div class="img-log">
+      <img src="{{album.cover}}" alt="">
+      <div class="genre">
+        <span>{{album.genre}}</span>
+      </div>
+    </div>
+    <div class="container-information-detail">
+      <div class="detail">
+        <span>Artistas: {{album.recordLabel}}</span>
+      </div>
+      <div class="detail">
+        <span>Lanzamiento: {{album.releaseDate}} </span>
+      </div>
+      <div class="detail">
+        <span>Genero: {{album.genre}} </span>
+      </div>
+      <div class="detail">
+        <span>{{album.description}}</span>
+      </div>
+    </div>
+    <div class="container-button">
+      <div>
+        <button type="button" class="design-button" (click)="goBack()">Regresar</button>
+      </div>
+      <div class="show-comment">
+        <button type="button" class="design-button" (click)="goBack()">Ver comentarios</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="list-information">
+    <hr/>
+    <div class="table-title">
+      <div class="container-div">
+        <span>Track</span>
+      </div>
+      <div class="container-div">
+        <span>Nombre</span>
+      </div>
+      <div class="container-div">
+        <span>Duracion</span>
+      </div>
+    </div>
+    <hr/>
+  </div>
+  <div class="row-information" *ngFor="let item of album.tracks; let i = index">
+    <div class="table-title">
+      <div class="container-div">
+        <span>{{item.id}}</span>
+      </div>
+      <div class="container-div">
+        <span>{{item.name}}</span>
+      </div>
+      <div class="container-div">
+        <span>{{item.duration}} min</span>
+      </div>
+    </div>
+  </div>
+</div>
